fixing spacing an white_back boxes

--- a/postcode/static/css/custom.css
+++ b/postcode/static/css/custom.css
@@ -130,7 +130,6 @@ p {
 .white_back{
   background: white;
   text-align: left; 
-  margin-top: .75em;
   padding: 20px 20px 20px 33px;
 }
 
